Testing Commit for Public Branch

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Cynthia Ugwu</title>
   </head>
   <body>
-    <h1>Portfolio Clone</h1>
+    <h1>Portfolio Clone Another Commit For Checking</h1>
   </body>
 </html>
