Hero Section Done

--- a/index.html
+++ b/index.html
@@ -3,9 +3,95 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Cynthia Ugwu</title>
   </head>
   <body>
-    <h1>Portfolio Clone Another Commit For Checking</h1>
+    <div id="main">
+      <div id="hero">
+        <div id="nav">
+          <a href="#">Cynthia Ugwu</a>
+          <a href="#" id="menu">MENU+</a>
+        </div>
+        <div id="heading">
+          <h1>Product</h1>
+          <div id="subHeading">
+            <h1>Desginer</h1>
+            <h5>Based In Toronto</h5>
+          </div>
+        </div>
+        <div id="freelanceInfo">
+          <h5>Available For Freelance</h5>
+          <h5 id="freeSpacing">Work From May 23'</h5>
+        </div>
+        <div id="heroFooter">
+          <div id="footerCol1">
+            <h4>Currently Working at Yml</h4>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              style="width: 20px; height: 15px; margin-left: 5px"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M4.5 19.5l15-15m0 0H8.25m11.25 0v11.25"
+              />
+            </svg>
+          </div>
+          <div id="footerCol2">
+            <h4>PROTOPIE AMBASSADOR</h4>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              style="width: 20px; height: 15px; margin-left: 5px"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M4.5 19.5l15-15m0 0H8.25m11.25 0v11.25"
+              />
+            </svg>
+          </div>
+          <div id="footerCol3">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              id="heroFooterSvg"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M12 4.5v15m0 0l6.75-6.75M12 19.5l-6.75-6.75"
+              />
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              id="heroFooterSvg"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M12 4.5v15m0 0l6.75-6.75M12 19.5l-6.75-6.75"
+              />
+            </svg>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
