--- a/index.html
+++ b/index.html
@@ -91,6 +91,26 @@
           </div>
         </div>
       </div>
+
+      <!-- Projects Section -->
+
+      <div id="projectSection">
+        <div id="pInfo">
+          <h1>The Plug</h1>
+          <h4>2022</h4>
+          <img src="https://cynthiaugwu.com/images/hovers/hudu.png" alt="" />
+        </div>
+        <div id="pInfo">
+          <h1>Ixperience</h1>
+          <h4>2022</h4>
+          <img src="https://cynthiaugwu.com/images/hovers/hudu.png" alt="" />
+        </div>
+        <div id="pInfo" class="infoLast">
+          <h1>Hudu</h1>
+          <h4>2021</h4>
+          <img src="https://cynthiaugwu.com/images/hovers/hudu.png" alt="" />
+        </div>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
