All Section Done

--- a/index.html
+++ b/index.html
@@ -111,6 +111,35 @@
           <img src="https://cynthiaugwu.com/images/hovers/hudu.png" alt="" />
         </div>
       </div>
+
+      <!-- About Section -->
+      <div id="aboutSection">
+        <div id="arow">
+          <div id="aboutImage">
+            <img src="https://cynthiaugwu.com/images/cynthia.png" alt="" />
+          </div>
+          <div id="aboutContent">
+            <h5>(About Me)</h5>
+            <p>
+              I'm a product designer with a passion for creating products that
+              not only look good but also solve real problems. When I'm not
+              sketching ideas on paper, you can find me binge-watching a Netflix
+              series or playing video games. My design philosophy is simple:
+              make it visually appealing, functional, and bring a smile to
+              people's faces. I'm the designer you want on your team if you want
+              to make people say 'I need that in my life!'.
+            </p>
+            <button>Let's Talk</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Social Media -->
+
+      <div id="socialSection">
+        <h5 id="sFirst">(Forget To Mention)</h5>
+        <h5>Follow Me On Instagram</h5>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
