Home Page Completed

--- a/index.html
+++ b/index.html
@@ -140,6 +140,21 @@
         <h5 id="sFirst">(Forget To Mention)</h5>
         <h5>Follow Me On Instagram</h5>
       </div>
+
+      <!-- Footer Section -->
+
+      <footer>
+        <div id="footer-left">
+          <h5>2023 &copy;</h5>
+          <h5>10:26PM EST</h5>
+        </div>
+        <div id="footer-right">
+          <h5>Dribble</h5>
+          <h5>Instgram</h5>
+          <h5>LinkedIn</h5>
+          <h5>Twitter</h5>
+        </div>
+      </footer>
     </div>
     <script src="script.js"></script>
   </body>
