Bounding Element Added

--- a/index.html
+++ b/index.html
@@ -15,15 +15,25 @@
           <a href="#" id="menu">MENU+</a>
         </div>
         <div id="heading">
-          <h1>Product</h1>
+          <div class="bounding">
+            <h1 class="boundingElement">Product</h1>
+          </div>
           <div id="subHeading">
-            <h1>Desginer</h1>
-            <h5>Based In Toronto</h5>
+            <div class="bounding">
+              <h1 class="boundingElement">Desginer</h1>
+            </div>
+            <div class="bounding">
+              <h5 class="boundingElement">Based In Toronto</h5>
+            </div>
           </div>
         </div>
         <div id="freelanceInfo">
-          <h5>Available For Freelance</h5>
-          <h5 id="freeSpacing">Work From May 23'</h5>
+          <div class="bounding">
+            <h5>Available For Freelance</h5>
+          </div>
+          <div class="bounding">
+            <h5 id="freeSpacing">Work From May 23'</h5>
+          </div>
         </div>
         <div id="heroFooter">
           <div id="footerCol1">
