--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         </div>
         <div id="freelanceInfo">
           <div class="bounding">
-            <h5>Available For Freelance</h5>
+            <h5 class="boundingElement">Available For Freelance</h5>
           </div>
           <div class="bounding">
-            <h5 id="freeSpacing">Work From May 23'</h5>
+            <h5 id="freeSpacing" class="boundingElement">Work From May 23'</h5>
           </div>
         </div>
         <div id="heroFooter">
