Animation Added Success

--- a/index.html
+++ b/index.html
@@ -106,20 +106,23 @@
       <!-- Projects Section -->
 
       <div id="projectSection">
-        <div id="pInfo">
+        <div id="pInfo" class="projectInfo">
+          <img src="https://cynthiaugwu.com/images/hovers/plug.png" alt="" />
           <h1>The Plug</h1>
           <h4>2022</h4>
-          <img src="https://cynthiaugwu.com/images/hovers/hudu.png" alt="" />
         </div>
-        <div id="pInfo">
+        <div id="pInfo" class="projectInfo">
+          <img
+            src="https://cynthiaugwu.com/images/hovers/ixperience.png"
+            alt=""
+          />
           <h1>Ixperience</h1>
           <h4>2022</h4>
-          <img src="https://cynthiaugwu.com/images/hovers/hudu.png" alt="" />
         </div>
-        <div id="pInfo" class="infoLast">
+        <div id="pInfo" class="infoLast projectInfo">
+          <img src="https://cynthiaugwu.com/images/hovers/hudu.png" alt="" />
           <h1>Hudu</h1>
           <h4>2021</h4>
-          <img src="https://cynthiaugwu.com/images/hovers/hudu.png" alt="" />
         </div>
       </div>
 
