Heading Hover Fix And Blend Added

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div id="projectSection">
         <div id="pInfo" class="projectInfo">
           <img src="https://cynthiaugwu.com/images/hovers/plug.png" alt="" />
-          <h1>The Plug</h1>
+          <h1 class="pHeading">The Plug</h1>
           <h4>2022</h4>
         </div>
         <div id="pInfo" class="projectInfo">
@@ -116,12 +116,12 @@
             src="https://cynthiaugwu.com/images/hovers/ixperience.png"
             alt=""
           />
-          <h1>Ixperience</h1>
+          <h1 class="pHeading">Ixperience</h1>
           <h4>2022</h4>
         </div>
         <div id="pInfo" class="infoLast projectInfo">
           <img src="https://cynthiaugwu.com/images/hovers/hudu.png" alt="" />
-          <h1>Hudu</h1>
+          <h1 class="pHeading">Hudu</h1>
           <h4>2021</h4>
         </div>
       </div>
