Header Animation Added and Project Section Animation Fixed

--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
     <div id="main">
       <div id="hero">
         <div id="nav">
-          <a href="#">Cynthia Ugwu</a>
-          <a href="#" id="menu">MENU+</a>
+          <a href="#" id="logoAnimate">Cynthia Ugwu</a>
+          <ul>
+            <li class="menuItem">The Plug</li>
+            <li class="menuItem">Ixperience</li>
+            <li class="menuItem">Hudu</li>
+            <li class="menuItem">Playground</li>
+            <li class="menuItem">Contact</li>
+          </ul>
+          <button id="menu">MENU+</button>
         </div>
         <div id="heading">
           <div class="bounding">
