Second last Commit

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="nav">
           <a href="#" id="logoAnimate">Cynthia Ugwu</a>
           <ul>
-            <li class="menuItem">The Plug</li>
+            <li class="menuItem">The Plug Last Commit</li>
             <li class="menuItem">Ixperience</li>
             <li class="menuItem">Hudu</li>
             <li class="menuItem">Playground</li>
